syntax = "proto3";
package progress;

import "google/protobuf/timestamp.proto";
import "common_event.proto";

message ProgressEventEnvelope {
  common.EventMeta meta = 1;

  oneof event {
    CourseEnrolledEvent course_enrolled = 10;
    LessonCompletedEvent lesson_completed = 11;
    CourseCompletedEvent course_completed = 12;
  }
}

message CourseEnrolledEvent {
  int64 user_id = 1;
  int64 course_id = 2;
  google.protobuf.Timestamp enrolled_at = 3;
}

message LessonCompletedEvent {
  int64 user_id = 1;
  int64 course_id = 2;
  int64 lesson_id = 3;
  google.protobuf.Timestamp completed_at = 4;
}

message CourseCompletedEvent {
  int64 user_id = 1;
  int64 course_id = 2;
  google.protobuf.Timestamp completed_at = 3;
}
